# HL_Trading_

./: .gitignore
hl_trading/: .env.example  Dockerfile  ROADMAP.md  pyproject.toml
hl_trading/deploy/: docker-compose.yml  prometheus.yml
hl_trading/deploy/clickhouse/: init.sql
hl_trading/deploy/grafana/dashboards/: hl-trading.json
hl_trading/deploy/grafana/provisioning/dashboards/: dashboards.yml
hl_trading/deploy/postgres/: init.sql  migrate_001_v2.sql
hl_trading/src/hl_trading/: cli.py  config.py  domain.py  metrics.py  registry.py
hl_trading/src/hl_trading/adapters/: __init__.py  hl_order_response.py  hyperliquid_factory.py
hl_trading/src/hl_trading/book/: __init__.py  l2.py
hl_trading/src/hl_trading/pnl/: __init__.py  rollup.py
hl_trading/src/hl_trading/reconcile/: reconciler.py
hl_trading/src/hl_trading/replay/: __init__.py  replay_runner.py
hl_trading/src/hl_trading/runtime/: __init__.py  engine.py
hl_trading/src/hl_trading/services/: __init__.py  actor_analysis.py  actor_watch.py  execution.py  holder_analysis.py  live_signal_analysis.py  live_wallet_signals.py  market_data.py  participant_watchlist.py  portfolio.py  risk.py  wallet_signals.py  ws_user_parsers.py
hl_trading/src/hl_trading/storage/: __init__.py  clickhouse_l2.py  file_l2.py  hub.py  l2_serialize.py  postgres_journal.py  postgres_store.py  redis_books.py
hl_trading/src/hl_trading/strategies/: __init__.py  base.py  depth_front_run.py  lit_hype_depth_strategy.py  loader.py  null_strategy.py  sol_depth_strategy.py
